--- a/index.html
+++ b/index.html
@@ -1,283 +1,168 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Melec Building</title>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
-  <style>
-    :root {
-      --bg-gradient-dark: linear-gradient(135deg, #0d0d0d, #1a1a1a);
-      --bg-gradient-light: linear-gradient(135deg, #f0f0f0, #e0e0e0);
-      --text-dark: #fff;
-      --text-light: #111;
-    }
-
-    body {
-      margin: 0;
-      font-family: Arial, sans-serif;
-      display: flex;
-      flex-direction: column;
-      height: 100vh;
-      overflow: hidden;
-      background: var(--bg-gradient-dark);
-      color: var(--text-dark);
-      transition: background 0.3s, color 0.3s;
-    }
-
-    body.light {
-      background: var(--bg-gradient-light);
-      color: var(--text-light);
-    }
-
-    header, footer {
-      background: inherit;
-      padding: 1rem;
-      flex-shrink: 0;
-      z-index: 1000;
-    }
-
-    header {
-      position: sticky;
-      top: 0;
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-    }
-
-    footer {
-      position: sticky;
-      bottom: 0;
-      display: flex;
-      justify-content: center;
-      gap: 1rem;
-    }
-
-    main {
-      flex: 1;
-      overflow-y: auto;
-      -ms-overflow-style: none;
-      scrollbar-width: none;
-    }
-    main::-webkit-scrollbar {
-      display: none;
-    }
-
-    nav ul {
-      list-style: none;
-      display: flex;
-      gap: 1.5rem;
-      margin: 0;
-      padding: 0;
-    }
-
-    nav a {
-      text-decoration: none;
-      color: inherit;
-      font-weight: bold;
-    }
-
-    .hamburger {
-      display: none;
-      flex-direction: column;
-      gap: 5px;
-      cursor: pointer;
-    }
-    .hamburger div {
-      width: 25px;
-      height: 3px;
-      background: currentColor;
-    }
-
-    @media (max-width: 768px) {
-      nav ul {
-        display: none;
-        flex-direction: column;
-        background: #111;
-        color: #fff;
-        position: absolute;
-        top: 60px;
-        right: 10px;
-        padding: 1rem;
-        border-radius: 0.5rem;
-      }
-      body.light nav ul {
-        background: #eee;
-        color: #111;
-      }
-      nav ul.show {
-        display: flex;
-      }
-      .hamburger {
-        display: flex;
-      }
-    }
-
-    .circle-icon {
-      width: 60px;
-      height: 60px;
-      border-radius: 50%;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      font-size: 1.6rem;
-      background: white;
-      color: black;
-      transition: transform 0.2s;
-    }
-    body.light .circle-icon {
-      background: black;
-      color: white;
-    }
-    .circle-icon:hover {
-      transform: scale(1.1);
-    }
-
-    /* Controls */
-    .controls {
-      display: flex;
-      gap: 0.5rem;
-      margin-left: 1rem;
-    }
-    .controls button {
-      border: none;
-      padding: 0.4rem 0.8rem;
-      border-radius: 0.4rem;
-      cursor: pointer;
-      font-weight: bold;
-      background: #333;
-      color: #fff;
-    }
-    body.light .controls button {
-      background: #ddd;
-      color: #111;
-    }
-    .controls button.active {
-      outline: 2px solid #999;
-    }
-  </style>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Melec Building</title>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
+<style>
+:root {
+  --primary-bg: #1a73e8;
+  --secondary-bg: #ffffff;
+  --text-color: #111;
+  --footer-bg: #1a73e8;
+}
+body.dark {
+  --primary-bg: #111;
+  --secondary-bg: #222;
+  --text-color: #eee;
+  --footer-bg: #000;
+}
+* {margin:0;padding:0;box-sizing:border-box;}
+body {font-family: Arial,sans-serif; color: var(--text-color); background: var(--secondary-bg);}
+header, footer {position:sticky; background: var(--primary-bg); color:#fff; display:flex; align-items:center; justify-content:space-between; padding:1rem;}
+header {top:0;}
+footer {bottom:0;}
+main {padding: 6rem 1rem 4rem; min-height: calc(100vh - 10rem);}
+nav ul {display:flex; gap:1rem; list-style:none;}
+nav li {cursor:pointer;}
+.toggle-btn {cursor:pointer; display:none;}
+.hamburger {display:none; font-size:1.5rem; cursor:pointer;}
+.page {display:none;}
+.page.active {display:block; animation:fadein 0.3s;}
+@keyframes fadein {from{opacity:0;} to{opacity:1;}}
+.footer-icons {display:flex; gap:1rem;}
+.footer-icons a {color:#fff; font-size:1.5rem; display:flex; align-items:center; justify-content:center; width:40px; height:40px; border-radius:50%; background:#333;}
+.locale-btn, .theme-btn {margin-left:1rem; cursor:pointer;}
+@media (max-width:768px){
+  nav ul {display:none; flex-direction:column; position:absolute; top:4rem; left:0; background: var(--primary-bg); width:100%; padding:1rem;}
+  nav ul.show {display:flex;}
+  .hamburger {display:block;}
+  .locale-btn, .theme-btn {margin:0.5rem 0;}
+}
+</style>
 </head>
 <body>
-  <!-- HEADER -->
-  <header>
-    <div class="logo">MELEC</div>
-    <nav>
-      <ul id="menu">
-        <li><a href="#home" data-i18n="home">Accueil</a></li>
-        <li><a href="#services" data-i18n="services">Nos Services</a></li>
-        <li><a href="#contact" data-i18n="contact">Contact</a></li>
-        <li><a href="#about" data-i18n="about">À Propos</a></li>
-        <li class="controls">
-          <button id="themeToggle"><i class="fas fa-moon"></i></button>
-          <button class="lang" data-lang="fr">FR</button>
-          <button class="lang" data-lang="en">EN</button>
-          <button class="lang" data-lang="ar">AR</button>
-        </li>
-      </ul>
-    </nav>
-    <div class="hamburger" onclick="toggleMenu()">
-      <div></div><div></div><div></div>
-    </div>
-  </header>
+<header>
+  <div>Melec Building</div>
+  <i class="fas fa-bars hamburger"></i>
+  <nav>
+    <ul>
+      <li data-page="services">Our Services</li>
+      <li data-page="about">About Us</li>
+      <li data-page="contact">Contact Us</li>
+      <li class="locale-btn" data-locale="en">EN</li>
+      <li class="locale-btn" data-locale="fr">FR</li>
+      <li class="locale-btn" data-locale="ar">AR</li>
+      <li class="theme-btn">🌙/☀️</li>
+    </ul>
+  </nav>
+</header>
+<main>
+  <section id="services" class="page active">
+    <h1>Our Services</h1>
+    <p>We offer top-notch electrical installations, maintenance, and emergency repairs. Safe, fast, and efficient service guaranteed.</p>
+  </section>
+  <section id="about" class="page">
+    <h1>About Us</h1>
+    <p>Melec Building has been lighting up homes and businesses for over a decade. Our team is skilled, professional, and passionate about electricity.</p>
+  </section>
+  <section id="contact" class="page">
+    <h1>Contact Us</h1>
+    <p>Phone: +212 6 12 34 56 78</p>
+    <p>Location: <a href="https://maps.app.goo.gl/ikg8DnRbzTjawiR69" target="_blank">View on Google Maps</a></p>
+  </section>
+</main>
+<footer>
+  <div class="footer-icons">
+    <a href="https://www.facebook.com/" target="_blank"><i class="fab fa-facebook-f"></i></a>
+    <a href="https://www.instagram.com/" target="_blank"><i class="fab fa-instagram"></i></a>
+    <a href="tel:+212612345678"><i class="fas fa-phone"></i></a>
+    <a href="https://maps.app.goo.gl/ikg8DnRbzTjawiR69" target="_blank"><i class="fas fa-map-marker-alt"></i></a>
+  </div>
+</footer>
 
-  <!-- MAIN -->
-  <main>
-    <section id="home"><h1 data-i18n="welcome">Bienvenue chez Melec Building</h1><p data-i18n="tagline">Experts en installations électriques modernes, sûres et durables.</p></section>
-    <section id="services"><h2 data-i18n="services">Nos Services</h2><ul><li data-i18n="service1">Installations électriques résidentielles et commerciales</li><li data-i18n="service2">Maintenance et dépannage</li><li data-i18n="service3">Solutions d’efficacité énergétique</li></ul></section>
-    <section id="about"><h2 data-i18n="about">À Propos</h2><p data-i18n="aboutText">Melec Building combine expertise et innovation pour offrir des services électriques fiables adaptés à vos besoins.</p></section>
-    <section id="contact"><h2 data-i18n="contact">Contact</h2><p>Email: contact@melec.ma<br>Tél: +212 6 12 34 56 78</p></section>
-  </main>
+<script>
+// Elements
+const pages = document.querySelectorAll('.page');
+const navItems = document.querySelectorAll('nav li[data-page]');
+const hamburger = document.querySelector('.hamburger');
+const navUl = document.querySelector('nav ul');
+const themeBtn = document.querySelector('.theme-btn');
+const localeBtns = document.querySelectorAll('.locale-btn');
 
-  <!-- FOOTER -->
-  <footer>
-    <div class="circle-icon"><i class="fas fa-envelope"></i></div>
-    <div class="circle-icon"><i class="fas fa-phone"></i></div>
-    <div class="circle-icon"><i class="fas fa-map-marker-alt"></i></div>
-    <div class="circle-icon"><i class="fas fa-building"></i></div>
-  </footer>
+// Load theme and locale from localStorage
+const savedTheme = localStorage.getItem('theme') || 'light';
+const savedLocale = localStorage.getItem('locale') || 'fr';
+document.body.classList.toggle('dark', savedTheme === 'dark');
+applyLocale(savedLocale);
 
-  <script>
-    const translations = {
-      fr: {
-        home: "Accueil",
-        services: "Nos Services",
-        contact: "Contact",
-        about: "À Propos",
-        welcome: "Bienvenue chez Melec Building",
-        tagline: "Experts en installations électriques modernes, sûres et durables.",
-        service1: "Installations électriques résidentielles et commerciales",
-        service2: "Maintenance et dépannage",
-        service3: "Solutions d’efficacité énergétique",
-        aboutText: "Melec Building combine expertise et innovation pour offrir des services électriques fiables adaptés à vos besoins."
-      },
-      en: {
-        home: "Home",
-        services: "Our Services",
-        contact: "Contact",
-        about: "About Us",
-        welcome: "Welcome to Melec Building",
-        tagline: "Experts in modern, safe, and durable electrical installations.",
-        service1: "Residential and commercial electrical installations",
-        service2: "Maintenance and troubleshooting",
-        service3: "Energy efficiency solutions",
-        aboutText: "Melec Building combines expertise and innovation to deliver reliable electrical services tailored to your needs."
-      },
-      ar: {
-        home: "الرئيسية",
-        services: "خدماتنا",
-        contact: "اتصل بنا",
-        about: "معلومات عنا",
-        welcome: "مرحبًا بكم في ميليك بيلدينغ",
-        tagline: "خبراء في التركيبات الكهربائية الحديثة والآمنة والمتينة.",
-        service1: "تركيبات كهربائية سكنية وتجارية",
-        service2: "الصيانة وإصلاح الأعطال",
-        service3: "حلول كفاءة الطاقة",
-        aboutText: "تجمع ميليك بيلدينغ بين الخبرة والابتكار لتقديم خدمات كهربائية موثوقة مصممة لتلبية احتياجاتكم."
-      }
-    };
+// Page navigation
+navItems.forEach(item => {
+  item.addEventListener('click', () => {
+    const pageId = item.dataset.page;
+    pages.forEach(p => p.classList.remove('active'));
+    document.getElementById(pageId).classList.add('active');
+    if(window.innerWidth <= 768) navUl.classList.remove('show');
+  });
+});
 
-    const themeToggle = document.getElementById("themeToggle");
-    const langButtons = document.querySelectorAll(".lang");
+// Hamburger toggle
+hamburger.addEventListener('click', () => navUl.classList.toggle('show'));
 
-    function applyTheme(theme) {
-      document.body.classList.toggle("light", theme === "light");
-      sessionStorage.setItem("theme", theme);
-      themeToggle.innerHTML = theme === "light" ? '<i class="fas fa-sun"></i>' : '<i class="fas fa-moon"></i>';
+// Theme toggle
+themeBtn.addEventListener('click', () => {
+  const isDark = document.body.classList.toggle('dark');
+  localStorage.setItem('theme', isDark ? 'dark' : 'light');
+});
+
+// Locale toggle
+localeBtns.forEach(btn => {
+  btn.addEventListener('click', () => {
+    const loc = btn.dataset.locale;
+    localStorage.setItem('locale', loc);
+    applyLocale(loc);
+    if(window.innerWidth <= 768) navUl.classList.remove('show');
+  });
+});
+
+// Apply translations
+function applyLocale(locale){
+  const translations = {
+    en: {
+      'Our Services':'Our Services',
+      'About Us':'About Us',
+      'Contact Us':'Contact Us',
+      'We offer top-notch electrical installations, maintenance, and emergency repairs. Safe, fast, and efficient service guaranteed.':'We offer top-notch electrical installations, maintenance, and emergency repairs. Safe, fast, and efficient service guaranteed.',
+      'Melec Building has been lighting up homes and businesses for over a decade. Our team is skilled, professional, and passionate about electricity.':'Melec Building has been lighting up homes and businesses for over a decade. Our team is skilled, professional, and passionate about electricity.',
+      'Phone: +212 6 12 34 56 78':'Phone: +212 6 12 34 56 78',
+      'Location: <a href="https://maps.app.goo.gl/ikg8DnRbzTjawiR69" target="_blank">View on Google Maps</a>':'Location: <a href="https://maps.app.goo.gl/ikg8DnRbzTjawiR69" target="_blank">View on Google Maps</a>'
+    },
+    fr: {
+      'Our Services':'Nos Services',
+      'About Us':'À Propos',
+      'Contact Us':'Contactez-nous',
+      'We offer top-notch electrical installations, maintenance, and emergency repairs. Safe, fast, and efficient service guaranteed.':'Nous offrons des installations électriques de qualité, maintenance et réparations d’urgence. Service sûr, rapide et efficace garanti.',
+      'Melec Building has been lighting up homes and businesses for over a decade. Our team is skilled, professional, and passionate about electricity.':'Melec Building illumine maisons et entreprises depuis plus d’une décennie. Notre équipe est compétente, professionnelle et passionnée par l’électricité.',
+      'Phone: +212 6 12 34 56 78':'Téléphone : +212 6 12 34 56 78',
+      'Location: <a href="https://maps.app.goo.gl/ikg8DnRbzTjawiR69" target="_blank">View on Google Maps</a>':'Emplacement : <a href="https://maps.app.goo.gl/ikg8DnRbzTjawiR69" target="_blank">Voir sur Google Maps</a>'
+    },
+    ar: {
+      'Our Services':'خدماتنا',
+      'About Us':'معلومات عنا',
+      'Contact Us':'اتصل بنا',
+      'We offer top-notch electrical installations, maintenance, and emergency repairs. Safe, fast, and efficient service guaranteed.':'نحن نقدم خدمات كهربائية عالية الجودة، صيانة وإصلاحات طارئة. خدمة آمنة وسريعة وفعالة.',
+      'Melec Building has been lighting up homes and businesses for over a decade. Our team is skilled, professional, and passionate about electricity.':'Melec Building تضيء المنازل والشركات منذ أكثر من عقد. فريقنا محترف وماهر وشغوف بالكهرباء.',
+      'Phone: +212 6 12 34 56 78':'الهاتف: +212 6 12 34 56 78',
+      'Location: <a href="https://maps.app.goo.gl/ikg8DnRbzTjawiR69" target="_blank">View on Google Maps</a>':'الموقع: <a href="https://maps.app.goo.gl/ikg8DnRbzTjawiR69" target="_blank">عرض على خرائط جوجل</a>'
     }
-
-    function applyLang(lang) {
-      document.querySelectorAll("[data-i18n]").forEach(el => {
-        el.textContent = translations[lang][el.dataset.i18n];
-      });
-      langButtons.forEach(btn => btn.classList.toggle("active", btn.dataset.lang === lang));
-      document.documentElement.lang = lang;
-      sessionStorage.setItem("lang", lang);
-    }
-
-    themeToggle.addEventListener("click", () => {
-      const newTheme = document.body.classList.contains("light") ? "dark" : "light";
-      applyTheme(newTheme);
+  };
+  document.querySelectorAll('.page').forEach(section => {
+    section.querySelectorAll('*').forEach(el => {
+      if(translations[locale][el.textContent.trim()]) el.innerHTML = translations[locale][el.textContent.trim()];
     });
-
-    langButtons.forEach(btn => {
-      btn.addEventListener("click", () => applyLang(btn.dataset.lang));
-    });
-
-    // Init defaults
-    applyTheme(sessionStorage.getItem("theme") || "dark");
-    applyLang(sessionStorage.getItem("lang") || "fr");
-
-    // Hamburger toggle
-    function toggleMenu() {
-      document.getElementById("menu").classList.toggle("show");
-    }
-    document.addEventListener("click", (e) => {
-      const menu = document.getElementById("menu");
-      const ham = document.querySelector(".hamburger");
-      if (!menu.contains(e.target) && !ham.contains(e.target)) {
-        menu.classList.remove("show");
-      }
-    });
-  </script>
+  });
+}
+</script>
 </body>
 </html>
